Closed Bug 563259 Opened 15 years ago Closed 15 years ago

TraceMonkey Shark builds broken since May 01

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: nthomas, Assigned: nthomas)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(2 files)

On it -- must be some relation between --enable-shark and the dtrace hooks I didn't notice.
Assignee: general → cdleary
Status: NEW → ASSIGNED
http://hg.mozilla.org/tracemonkey/rev/c63d6b20c590 I'll make sure it goes through before marking as fixed-in-tracemonkey, but it works on my 10.5 and Linux test machines.
It's no longer listed as burning on tinderbox. I don't know where it went (she shark build isn't even listed there anymore), but I'll assume it worked.
Whiteboard: fixed-in-tracemonkey
It only runs once a day, with the other nightly builds, so falls off the waterfall after 12 hours. I've forced a new build to verify the fix. Thanks for the quick work.
(In reply to comment #5) Thanks for finding it!
Broken in a different way now: g++-4.2 -fno-rtti ... -o libmozjs.dylib jsapi.o ... Undefined symbols: "_jsdtrace_execute_start", referenced from: _js_Execute in jsinvoke.o "_jsdtrace_function_return", referenced from: _js_Interpret in jsinterp.o _js_Interpret in jsinterp.o _js_Invoke in jsinvoke.o "_jsdtrace_execute_done", referenced from: _js_Execute in jsinvoke.o "_jsdtrace_function_rval", referenced from: _js_Interpret in jsinterp.o _js_Interpret in jsinterp.o _js_Invoke in jsinvoke.o "_jsdtrace_object_create", referenced from: js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsapi.o js::NewObject(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsarray.o _js_NewDateObjectMsec in jsdate.o _JS_NewSystemObject in jsdbgapi.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsexn.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsfun.o js::NewObject(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsinterp.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsinvoke.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsiter.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsobj.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in json.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsregexp.o js::NewObject(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jstypedarray.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsxml.o "_jsdtrace_object_finalize", referenced from: void FinalizeArenaList<JSObject, &(FinalizeObject(JSContext*, JSObject*, unsigned int))>(JSContext*, unsigned int)in jsgc.o void FinalizeArenaList<JSObject, &(FinalizeHookedObject(JSContext*, JSObject*, unsigned int))>(JSContext*, unsigned int)in jsgc.o _js_GC in jsgc.o _js_GC in jsgc.o "_jsdtrace_object_create_start", referenced from: js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsapi.o js::NewObject(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsarray.o _js_NewDateObjectMsec in jsdate.o _JS_NewSystemObject in jsdbgapi.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsexn.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsfun.o js::NewObject(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsinterp.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsinvoke.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsiter.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsobj.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in json.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsregexp.o js::NewObject(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jstypedarray.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsxml.o "_jsdtrace_object_create_done", referenced from: js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsapi.o js::NewObject(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsarray.o _js_NewDateObjectMsec in jsdate.o _JS_NewSystemObject in jsdbgapi.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsexn.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsfun.o js::NewObject(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsinterp.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsinvoke.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsiter.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsobj.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in json.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsregexp.o js::NewObject(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jstypedarray.o js::NewObjectWithGivenProto(JSContext*, JSClass*, JSObject*, JSObject*, unsigned long)in jsxml.o "_jsdtrace_function_info", referenced from: _js_Interpret in jsinterp.o _js_Interpret in jsinterp.o _js_Invoke in jsinvoke.o ld: symbol(s) not found collect2: ld returned 1 exit status This has also spread to mozilla-central since tracemonkey merged there.
Severity: normal → major
Whiteboard: fixed-in-tracemonkey
(In reply to comment #7) > Broken in a different way now: Hmmm -- did that subsequent build you kicked off work in comment 5? Fix is most likely already committed via bug 563870.
The May 2nd build on rev c63d6b20c590 looks like it failed in the same way as comment #7.
Attachment #443820 - Flags: review?(cdleary)
Comment on attachment 443820 [details] [diff] [review] fix bustage on Solaris Ginn, thanks for the patch! We happened to put a fix into tracemonkey that covers these changes already in bug 563870 which has now been merged into mozilla-central ala http://hg.mozilla.org/mozilla-central/rev/c052b348a626#l1.85 -- LMK if you have any questions!
Attachment #443820 - Flags: review?(cdleary)
nthomas, can you confirm unbustage so we can close as resolved?
Assignee: cdleary → nrthomas
0f5867192284 for the May 06 nightly was green. Please merge to mozilla-central.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-tracemonkey
(In reply to comment #13) > 0f5867192284 for the May 06 nightly was green. Please merge to mozilla-central. nthomas, do you mean there's some additional merging that must be done on top of the one mentioned in comment 11?
Sorry, failed to read that comment properly - no action needed.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: