Bug 563259: Fix shark/dtrace enabled combo. (r=me)