js/src/jsdtracef.h
@@ -45,38 +45,40 @@
 JS_BEGIN_EXTERN_C
 
 extern void
-jsdtrace_function_entry(JSContext *cx, JSStackFrame *fp, JSFunction *fun);
+jsdtrace_function_entry(JSContext *cx, JSStackFrame *fp, const JSFunction *fun);
 
 extern void
 jsdtrace_function_info(JSContext *cx, JSStackFrame *fp, JSStackFrame *dfp,
-                       JSFunction *fun);
+                       const JSFunction *fun);
 
 extern void
-jsdtrace_function_args(JSContext *cx, JSStackFrame *fp, JSFunction *fun, jsuint argc, jsval *argv);
+jsdtrace_function_args(JSContext *cx, JSStackFrame *fp, const JSFunction *fun,
+                       jsuint argc, jsval *argv);
 
 extern void
-jsdtrace_function_rval(JSContext *cx, JSStackFrame *fp, JSFunction *fun, jsval *rval);
+jsdtrace_function_rval(JSContext *cx, JSStackFrame *fp, const JSFunction *fun,
+                       jsval rval);
 
 extern void
-jsdtrace_function_return(JSContext *cx, JSStackFrame *fp, JSFunction *fun);
+jsdtrace_function_return(JSContext *cx, JSStackFrame *fp, const JSFunction *fun);
 
 extern void
-jsdtrace_object_create_start(JSStackFrame *fp, JSClass *clasp);
+jsdtrace_object_create_start(JSStackFrame *fp, const JSClass *clasp);
 
 extern void
-jsdtrace_object_create_done(JSStackFrame *fp, JSClass *clasp);
+jsdtrace_object_create_done(JSStackFrame *fp, const JSClass *clasp);
 
 extern void
-jsdtrace_object_create(JSContext *cx, JSClass *clasp, JSObject *obj);
+jsdtrace_object_create(JSContext *cx, const JSClass *clasp, const JSObject *obj);
 
 extern void
-jsdtrace_object_finalize(JSObject *obj);
+jsdtrace_object_finalize(const JSObject *obj);
 
 extern void
-jsdtrace_execute_start(JSScript *script);
+jsdtrace_execute_start(const JSScript *script);
 
 extern void
-jsdtrace_execute_done(JSScript *script);
+jsdtrace_execute_done(const JSScript *script);
 
 JS_END_EXTERN_C
 
@@ -88,11 +90,10 @@ class DTrace {
      * If |lval| is provided to the enter/exit methods, it is tested to see if
      * it is a function as a predicate to the dtrace event emission.
      */
-    static void enterJSFun(const JSContext *cx, const JSStackFrame *fp, const JSFunction *fun,
-                           const JSStackFrame *dfp, jsuint argc, const jsval *argv,
-                           const jsval *lval = NULL);
-    static void exitJSFun(const JSContext *cx, const JSStackFrame *fp, const JSFunction *fun,
-                          const jsval *rval, const jsval *lval = NULL);
+    static void enterJSFun(JSContext *cx, JSStackFrame *fp, const JSFunction *fun,
+                           JSStackFrame *dfp, jsuint argc, jsval *argv, jsval *lval = NULL);
+    static void exitJSFun(JSContext *cx, JSStackFrame *fp, const JSFunction *fun,
+                          jsval rval, jsval *lval = NULL);
 
     static void finalizeObject(const JSObject *obj);
 
@@ -108,28 +109,27 @@ class DTrace {
 };
 
 inline void
-DTrace::enterJSFun(const JSContext *cx, const JSStackFrame *fp, const JSFunction *fun,
-                   const JSStackFrame *dfp, jsuint argc, const jsval *argv,
-                   const jsval *lval)
+DTrace::enterJSFun(JSContext *cx, JSStackFrame *fp, const JSFunction *fun,
+                   JSStackFrame *dfp, jsuint argc, jsval *argv, jsval *lval)
 {
 #ifdef INCLUDE_MOZILLA_DTRACE
-    if (!lval || VALUE_IS_FUNCTION(cx, lval)) {
+    if (!lval || VALUE_IS_FUNCTION(cx, *lval)) {
         if (JAVASCRIPT_FUNCTION_ENTRY_ENABLED())
-            jsdtrace_function_entry(cx, &frame, fun);
+            jsdtrace_function_entry(cx, fp, fun);
         if (JAVASCRIPT_FUNCTION_INFO_ENABLED())
-            jsdtrace_function_info(cx, &frame, frame.down, fun);
+            jsdtrace_function_info(cx, fp, dfp, fun);
         if (JAVASCRIPT_FUNCTION_ARGS_ENABLED())
-            jsdtrace_function_args(cx, &frame, fun, frame.argc, frame.argv);
+            jsdtrace_function_args(cx, fp, fun, argc, argv);
     }
 #endif
 }
 
 inline void
-DTrace::exitJSFun(const JSContext *cx, const JSStackFrame *fp, const JSFunction *fun,
-                  const jsval *rval, const jsval *lval)
+DTrace::exitJSFun(JSContext *cx, JSStackFrame *fp, const JSFunction *fun,
+                  jsval rval, jsval *lval)
 {
 #ifdef INCLUDE_MOZILLA_DTRACE
-    if (!lval || VALUE_IS_FUNCTION(cx, lval)) {
+    if (!lval || VALUE_IS_FUNCTION(cx, *lval)) {
         if (JAVASCRIPT_FUNCTION_RVAL_ENABLED())
             jsdtrace_function_rval(cx, fp, fun, rval);
         if (JAVASCRIPT_FUNCTION_RETURN_ENABLED())
@@ -160,7 +160,7 @@ inline void
 DTrace::ExecutionScope::endExecution()
 {
 #ifdef INCLUDE_MOZILLA_DTRACE
-    if (JAVASCRIPT_EXECUTE_END_ENABLED())
+    if (JAVASCRIPT_EXECUTE_DONE_ENABLED())
         jsdtrace_execute_done(script);
 #endif
 }
